--- a/src/src.csproj
+++ b/src/src.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,13 +6,13 @@
     <RootNamespace>PipServices3.ElasticSearch</RootNamespace>
     <ApplicationIcon />
     <Win32Resource />
-    <Version>3.0.2</Version>
+    <Version>3.0.3</Version>
     <Authors>Sergey Seroukhov, Alex Mazur, Andrew Harrington</Authors>
     <Copyright>Conceptual Vision Consulting LLC. 2017-2018</Copyright>
     <Description>ElasticSearch logger for Pip.Services in .NET</Description>
     <Company>Conceptual Vision Consulting LLC.</Company>
     <Product>PipServices3.ElasticSearch</Product>
-    <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/pip-services3-dotnet/pip-services3-elasticsearch-dotnet</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/pip-services3/pip-services3/master/design/Icon.png</PackageIconUrl>
     <PackageTags>pip-services3 microservices framework</PackageTags>
