--- a/src/src.csproj
+++ b/src/src.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
     <AssemblyName>PipServices3.ElasticSearch</AssemblyName>
     <RootNamespace>PipServices3.ElasticSearch</RootNamespace>
     <ApplicationIcon />
     <Win32Resource />
-    <Version>3.2.0</Version>
+    <Version>3.3.0</Version>
     <Authors>Sergey Seroukhov, Alex Mazur, Andrew Harrington, Danyil Tretiakov</Authors>
-    <Copyright>Conceptual Vision Consulting LLC. 2017-2020</Copyright>
+    <Copyright>Conceptual Vision Consulting LLC. 2017-2021</Copyright>
     <Description>ElasticSearch logger for Pip.Services in .NET</Description>
     <Company>Conceptual Vision Consulting LLC.</Company>
     <Product>PipServices3.ElasticSearch</Product>
@@ -30,8 +30,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Elasticsearch.Net" Version="7.8.0" />
-    <PackageReference Include="PipServices3.Commons" Version="3.1.2" />
-    <PackageReference Include="PipServices3.Components" Version="3.2.1" />
-    <PackageReference Include="PipServices3.Rpc" Version="3.4.2" />
+    <PackageReference Include="PipServices3.Commons" Version="3.3.0" />
+    <PackageReference Include="PipServices3.Components" Version="3.3.0" />
+    <PackageReference Include="PipServices3.Rpc" Version="3.5.1" />
   </ItemGroup>
 </Project>
